[package]
name = "rust_orderbook"
version = "0.1.0"
authors = ["bigfatwhale <bigfatwhale@gmail.com>"]

[dependencies]
intmap = "2.0"
nom = "7.1.3"
crossbeam = "0.8.2"
typenum = "1.17.0"
pyo3 = { version = "0.20.2" }
# pyo3 = { version = "0.20.2"}

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]